--- a/solutions.tex
+++ b/solutions.tex
@@ -77,6 +77,7 @@
 \newcommand\dd{\;\!\mathrm{d}}
 \newcommand\groupification{\mathrm{H}}
 \newcommand\identity{\mathrm{id}}
+\newcommand\nil{\mathfrak{N}}
 \newcommand\projection{\pi}
 
 \DeclareMathOperator\alg{alg}
@@ -91,6 +92,7 @@
 \DeclareMathOperator\SheafHom{\mathcal{H}om}
 \DeclareMathOperator\Spec{Spec}
 \DeclareMathOperator\Supp{Supp}
+\DeclareMathOperator\vanishing{V}
 
 \title{Solutions to Foundations of Algebraic Geometry}
 \author{Pieter Belmans}
