--- a/solutions.tex
+++ b/solutions.tex
@@ -82,6 +82,7 @@
 
 \DeclareMathOperator\alg{alg}
 \DeclareMathOperator\coker{coker}
+\DeclareMathOperator\distinguished{D}
 \DeclareMathOperator\Hom{Hom}
 \DeclareMathOperator\homology{H}
 \DeclareMathOperator\image{im}
