--- a/solutions.tex
+++ b/solutions.tex
@@ -85,6 +85,7 @@
 \DeclareMathOperator\distinguished{D}
 \DeclareMathOperator\Hom{Hom}
 \DeclareMathOperator\homology{H}
+\DeclareMathOperator\ideal{I}
 \DeclareMathOperator\image{im}
 \DeclareMathOperator\Mor{Mor}
 \DeclareMathOperator\pre{pre}
