--- a/solutions.tex
+++ b/solutions.tex
@@ -75,6 +75,7 @@
 \newcommand\ball{\mathrm{B}}
 \newcommand\category[1]{\mathsf{#1}}
 \newcommand\dd{\;\!\mathrm{d}}
+\newcommand\forgetful{\mathrm{F}}
 \newcommand\groupification{\mathrm{H}}
 \newcommand\identity{\mathrm{id}}
 \newcommand\nil{\mathfrak{N}}
